@@ -5,6 +5,7 @@
 #include "V2Country.h"
 #include "V2Diplomacy.h"
 #include "V2Factory.h"
+#include "V2TechSchools.h"
 #include "Mapper.h"
 
 
@@ -21,7 +22,7 @@ class V2World {
 		void				setupStates(stateMapping);
 		void				setupPops(EU3World& sourceWorld);
 		void				convertTechs(EU3World sourceWorld);
-		void				convertTechSchools(EU3World sourceWorld);
+		void				convertTechSchools(EU3World sourceWorld, vector<techSchool> techSchools);
 		void				output(FILE*);
 		void				convertDiplomacy(EU3World sourceWorld, countryMapping countryMap);
 		void				convertLeaders(EU3World sourceWorld, map<int,int>& leaderIDMap);
